# demo

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
LearnOpenGL/: CMakeLists.txt
LearnOpenGL/camera_circle/: CMakeLists.txt  config.hpp.in  main.cpp
LearnOpenGL/class_shader/: CMakeLists.txt  config.hpp.in  main.cpp  shader.fs  shader.vs
LearnOpenGL/colored_triangle/: CMakeLists.txt  main.cpp
LearnOpenGL/common/: CMakeLists.txt  shader.cpp  shader.hpp  used_glm.hpp
LearnOpenGL/coordinate_systems/: CMakeLists.txt  main.cpp  shader.vs
LearnOpenGL/coordinate_systems_depth/: CMakeLists.txt  main.cpp
LearnOpenGL/coordinate_systems_multiple/: CMakeLists.txt  main.cpp  shader.fs  shader.vs
LearnOpenGL/getting_started_shaders/: CMakeLists.txt  main.cpp
LearnOpenGL/glad/: CMakeLists.txt
LearnOpenGL/glad/include/glad/: glad.h
LearnOpenGL/glad/src/: glad.c
LearnOpenGL/happy_box/: CMakeLists.txt  main.cpp  shader.fs
LearnOpenGL/happy_box_glm/: CMakeLists.txt  main.cpp  shader.fs  shader.vs
LearnOpenGL/hello_square/: CMakeLists.txt  main.cpp
LearnOpenGL/hello_triangle/: CMakeLists.txt  main.cpp
LearnOpenGL/hello_world/: CMakeLists.txt  main.cpp
LearnOpenGL/temp_for_matrix/: CMakeLists.txt  main.cpp  shader.fs  shader.vs
LearnOpenGL/textures/: CMakeLists.txt  main.cpp  shader.fs  shader.vs
cmake_install_demo/: .gitignore  CMakeLists.txt  root.cmake
cmake_install_demo/dynamic_lib/: CMakeLists.txt
cmake_install_demo/dynamic_lib/inc/: dl.hpp
cmake_install_demo/dynamic_lib/src/: dl.cpp
cmake_install_demo/hello_cmake/: CMakeLists.txt
cmake_install_demo/hello_cmake/src/: main.cpp
cmake_install_demo/static_lib/: CMakeLists.txt
cmake_install_demo/static_lib/inc/: sl_private.hpp  sl_public.hpp
cmake_install_demo/static_lib/src/: sl.cpp
cmake_template/: CMakeLists.txt  main.cpp
design_mode/: CMakeLists.txt
design_mode/command/: command_demo.cpp
doc/: CMakeLists手册.md  Git手册.md  MinGW System Information.txt  OpenSCAD记录.md  QxOrm笔记.md  Unix System Information.txt  VS 17 2022 System Information.txt  VSCode使用手册.md  docke.md  wireshark.md  系统与软件配置手册.md  线性代数.md  设计模式.md  资源.md  键盘计划.md
doc/at_work/: 仿真控制与仿真器适配器说明文档.md  通用配置文件录入类.md  部分模块说明文档.md
doc/plantuml/: ER图.md  序列图.md  活动图.md  用例图.md  类图.md
flex_bison_demo/: CMakeLists.txt  calc.l  calc.y  main.c
from_s40_to_be_processed/: 1readme.md
from_s40_to_be_processed/001/: bind_dns.md  default_config.md  disk.md  docker-record.md  nginx.md  record_and_summary.md  samba.md
gloabl_obj_in_static_lib/: CMakeLists.txt  dynamic_lib_a.cpp  dynamic_lib_a.hpp  dynamic_lib_b.cpp  dynamic_lib_b.hpp  main.cpp  static_lib.cpp  static_lib.hpp
learn_qxorm_manual/: CMakeLists.txt
learn_qxorm_manual/inc/: person.hpp
learn_qxorm_manual/src/: person.cpp
openscad/: test.scad
